# dashboardh

./: .ghci  LICENSE  Makefile  README.md  cabal.sandbox.config  dashboardh.cabal  notes
src/: Dashboardh.hs  main.hs
src/Dashboardh/: BuildTime.hs  Core.hs  Job.hs  Prelude.hs  Status.hs
src/web/: index.html
